update text and figures

--- a/main_report.qmd
+++ b/main_report.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Kajian Banjir 100 Tahunan Landfill B3 `r params$pt`"
 format: html
+number-sections: true
 editor: visual
 params: 
   pt: PT. Well Harvest Wining
@@ -10,6 +11,10 @@ params:
   sungai: Sungai Tengar
   sta_hujan: Stasiun Rahadi Oesman
   panjang_hujan: '20 Tahun'
+  awal_hjn: 2002
+  akhir_hjn: 2023
+  jarak_ke_sta: '3.4 Km'
+  luas_ca: '32.01 Ha'
 bibliography: references.bib
 ---
 
@@ -29,8 +34,7 @@ a <- 2
 
 # Ketersediaan Data
 
-Untuk melakukan kajian bebas banjir ini diperlukan data-data primer maupun sekunder yang dikumpulkan untuk kemudian diolah dan dianalisis sehingga menghasilkan informasi yang memadai sebagai dasar dari laporan hidrologi. Data primer didapatkan dari pengambilan data langsung di lapangan saat tahap pekerjaan lapangan berlangsung, sedangkan data sekunder didapatkan dari sumber lain yang telah ada sebelumnya. Rangkuman data yang digunakan pada penelitian ini baik primer maupun
-sekunder adalah sebagai berikut:
+Untuk melakukan kajian bebas banjir ini diperlukan data-data primer maupun sekunder yang dikumpulkan untuk kemudian diolah dan dianalisis sehingga menghasilkan informasi yang memadai sebagai dasar dari laporan hidrologi. Data primer didapatkan dari pengambilan data langsung di lapangan saat tahap pekerjaan lapangan berlangsung, sedangkan data sekunder didapatkan dari sumber lain yang telah ada sebelumnya. Rangkuman data yang digunakan pada penelitian ini baik primer maupun sekunder adalah sebagai berikut:
 
 | No  | Data                            | Jenis Data    | Sumber Data          |
 |:---:|---------------------------------|---------------|----------------------|
@@ -44,9 +48,19 @@ sekunder adalah sebagai berikut:
 
 # *Catchment Area* (CA)
 
-# Analisa Curah Hujan
+Untuk dapat menghitung debit banjir, diperlukan 2 (dua) inputan data utama. Input yang pertama adalah karakteristik dari catchment area (CA) yang ditinjau seperti luasan, panjang sungai, dan kemiringan sungai. Kemudian input kedua yang diperlukan adalah curah hujan rencana.
+
+Untuk data karakteristik CA diperoleh dari deliniasi peta rupa bumi Indonesia (RBI). Hasil deliniasi menunjukkan terdapat satu CA di sekitar tapak proyek dengan luasan `r params$luas_ca`.
+
+![Peta Catchment Area](figures/ca.png){fig-align="center" width="563"}
+
+# Data dan Analisa Curah Hujan
 
 ## Kondisi Curah Hujan
+
+Data hujan yang digunakan mempunyai panjang waktu pengamatan selama `r params$panjang_hujan` dari tahun `r params$awal_hjn`hingga tahun `r params$akhir_hjn` yang bersumber pada `r params$sta_hjn`, berlokasi ±`r params$jarak_ke_sta` dari lokasi pekerjaan (Gambar 2). Berikut ditampilkan lokasi dan data curah hujan maksimum harian serta jumlah curah hujan bulanan rata-rata berupa tabel dan grafik pada stasiun tersebut.
+
+![Lokasi Stasiun Hujan Terhadap Lokasi Proyek](figures/ca_sta_hujan.png)
 
 ## Analisa Frekuensi
 
