--- a/main_report.qmd
+++ b/main_report.qmd
@@ -39,10 +39,6 @@ Dalam kajian banjir, besarnya (magnitude) debit didefinisikan sebagai kala ulang
 
 Untuk melakukan kajian bebas banjir ini terdiri dari dua tahapan analisa. Yang pertama adalah analisa hidrologi dimana output dari analisa ini adalah nilai debit banjir pada berbagai kala ulang. Tahapan yang kedua adalah analisa hidrolika dimana nilai debit banjir yang telah dihitung tadi dimodelkan/disimulasikan hingga memperoleh tinggi muka air banjir serta karakteristik hidrolik lainnya seperti kecepatan dan luas genangan.
 
-```{r}
-a <- 2
-```
-
 # Kriteria Desain dan Aturan Terkait
 
 Sebagai panduan (*guidelines*) dalam melakukan kajian banjir ini didasarkan pada beberapa aturan dan jurnal terkait sebagai berikut:
@@ -62,7 +58,7 @@ Sebagai panduan (*guidelines*) dalam melakukan kajian banjir ini didasarkan pada
 Untuk melakukan kajian bebas banjir ini diperlukan data-data primer maupun sekunder yang dikumpulkan untuk kemudian diolah dan dianalisis sehingga menghasilkan informasi yang memadai sebagai dasar dari laporan hidrologi. Data primer didapatkan dari pengambilan data langsung di lapangan saat tahap pekerjaan lapangan berlangsung, sedangkan data sekunder didapatkan dari sumber lain yang telah ada sebelumnya. Rangkuman data yang digunakan pada penelitian ini baik primer maupun sekunder ditampilkan dalam @tbl-data berikut:
 
 | No  | Data                                                     | Jenis Data    | Sumber Data          |
-|:----------------:|--------------------|------------------|------------------|
+|:----------------:|-------------------|------------------|------------------|
 |  1  | Data topografi                                           | Data Primer   | Pengukuran Topografi |
 |  2  | Data Batas Landfill                                      | Data Primer   | `r params$pt`        |
 |  3  | Digital Elevation Model (DEM)                            | Data Sekunder | DEMNAS               |
@@ -97,6 +93,8 @@ library(ggplot2)
 library(dplyr)
 library(lubridate)
 library(hydroTSM)
+library(plotly)
+library(lattice)
 
 dbt <- "Debit"
 hjn <- "Hujan"
@@ -141,8 +139,34 @@ ggplot(data,aes(x=Date, y=data[,2]))+geom_line(col="blue3") +
 #| echo: false
 
 zoo_rr_data <- zoo(data[,2],data$Date) 
-hydroplot(zoo_rr_data,var.type = "Precipitation",var.unit = "mm", xlab = "waktu", ylab = "curah hujan (mm)")
+hydroplot(zoo_rr_data,var.type = "Precipitation",var.unit = "mm", xlab = "time", ylab = "rainfall")
 
+
+```
+
+```{r}
+#| label: fig-matrixplot-rainfall
+#| fig-cap: "Matrixplot Data Hujan Bulanan"
+#| warning: false
+#| eval: true
+#| echo: false
+
+bulanan_zoo_rr_data <- daily2monthly(zoo_rr_data, FUN=sum, na.rm = T)
+bulanan_rata2_zoo <- daily2monthly(zoo_rr_data, FUN=mean, na.rm = T)
+
+mat <- matrix(bulanan_zoo_rr_data, ncol=12, byrow = T)
+mat_rata2 <- matrix(bulanan_rata2_zoo, ncol=12, byrow = T)
+colnames(mat) <- month.abb
+rownames(mat) <- unique(format(time(bulanan_zoo_rr_data), "%Y"))
+
+colnames(mat_rata2) <- month.abb
+rownames(mat_rata2) <- unique(format(time(bulanan_rata2_zoo), "%Y"))
+matrixplot_jml_hjn <- print(matrixplot(mat, ColorRamp = "Precipitation",
+                 main="Jumlah Curah Hujan Bulanan (mm)"))
+
+# output ke excel
+write.csv(mat,"output/jumlah_hujan_bulanan.csv")
+write.csv(mat_rata2,"output/rata2_hujan_bulanan.csv")
 
 ```
 
